[project]
name = "pyreveal"
version = "0.4.0"
description = "A Python library to simplify the creation of presentations using Reveal.js."
readme = "readme.md"
license = { text = "MIT" }
authors = [{ name = "Ali Tavallaie", email = "a.tavallaie@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/tavallaie/pyreveal"
Repository = "https://github.com/tavallaie/pyreveal"
Issues = "https://github.com/tavallaie/pyreveal/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.24,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]